# QueColle

./: .gitignore  README.md
src/: .env.development  docker-compose.development.yml  pyproject.toml
src/app/: pyproject.toml
src/app/accounts/: forms.py  urls.py  views.py
src/app/accounts/templates/accounts/: base.html  profile.html
src/app/config/: settings.py  urls.py
src/app/docker/: Dockerfile.development
src/app/question/: admin.py  forms.py  models.py  urls.py  views.py
src/app/question/fixture/: data.json  question.json  question_collection.json
src/app/question/migrations/: 0001_initial.py  0002_questioncollection_attention.py  0003_questioncollection_image.py  0004_alter_questioncollection_image.py  0005_alter_questioncollection_image.py  0006_data.py  0007_questioncollection_user.py
src/app/question/static/question/css/: question_about.css
src/app/question/templates/question/: aggregation.html  answer_done.html  create_question.html  create_question_collection.html  create_schedule.html  error.html  question.html  question_about.html  question_collection_delete.html  question_collection_update.html  question_delete.html  question_home.html  question_list.html  question_update.html  schedule_delete.html  schedule_detail.html
src/app/templates/: base.html
src/config/: settings.py  urls.py
src/docker/: Dockerfile.development  entrypoint.development.sh
src/nginx/: Dockerfile.development  nginx.development.conf
