[tool.poetry]
name = "quecolle"
version = "0.1.0"
description = "quecolle poetry"
authors = ["heku777 <chotips08@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.3"
gunicorn = "^20.1.0"
psycopg2 = "^2.8.6"
django-bootstrap-datepicker-plus = "^3.0.5"
django-bootstrap4 = "^3.0.1"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
